[gd_scene format=3 uid="uid://51xtsd686yvi"]

[ext_resource type="Script" uid="uid://ccmw0cwiw7ar0" path="res://ui/pages/idleHome.gd" id="1_3u8s3"]
[ext_resource type="PackedScene" uid="uid://dgvn43oanfb3p" path="res://ui/pages/hero_tab.tscn" id="2_4xnaw"]
[ext_resource type="PackedScene" uid="uid://ycpt7nti4cxp" path="res://ui/pages/hunting_grounds.tscn" id="3_vehlf"]
[ext_resource type="PackedScene" uid="uid://dmykdb6m3kuy" path="res://ui/components/EquipmentTooltip.tscn" id="4_vmrhr"]
[ext_resource type="PackedScene" path="res://ui/pages/shops/armorer_shop.tscn" id="5_armorer"]
[ext_resource type="PackedScene" path="res://ui/pages/shops/weaponsmith_shop.tscn" id="6_weapon"]
[ext_resource type="PackedScene" path="res://ui/pages/shops/consumables_shop.tscn" id="7_consum"]
[ext_resource type="PackedScene" path="res://ui/pages/shops/artisan_shop.tscn" id="8_artisan"]
[ext_resource type="PackedScene" path="res://ui/pages/shops/auction_shop.tscn" id="9_auction"]
[ext_resource type="PackedScene" path="res://ui/pages/shops/lady_luck_shop.tscn" id="10_luck"]

[node name="IdleHome" type="Control" unique_id=1163464952]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3u8s3")

[node name="MainLayout" type="VBoxContainer" parent="." unique_id=654606313]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ContentArea" type="ScrollContainer" parent="MainLayout" unique_id=1449707285]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PageContainer" type="VBoxContainer" parent="MainLayout/ContentArea" unique_id=1820643591]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeroTab" parent="MainLayout/ContentArea/PageContainer" unique_id=229612391 instance=ExtResource("2_4xnaw")]
layout_mode = 2

[node name="HuntingTab" parent="MainLayout/ContentArea/PageContainer" unique_id=106764822 instance=ExtResource("3_vehlf")]
visible = false
layout_mode = 2

[node name="ArmorerTab" parent="MainLayout/ContentArea/PageContainer" instance=ExtResource("5_armorer")]
visible = false
layout_mode = 2

[node name="WeaponsmithTab" parent="MainLayout/ContentArea/PageContainer" instance=ExtResource("6_weapon")]
visible = false
layout_mode = 2

[node name="ConsumablesTab" parent="MainLayout/ContentArea/PageContainer" instance=ExtResource("7_consum")]
visible = false
layout_mode = 2

[node name="ArtisanTab" parent="MainLayout/ContentArea/PageContainer" instance=ExtResource("8_artisan")]
visible = false
layout_mode = 2

[node name="AuctionTab" parent="MainLayout/ContentArea/PageContainer" instance=ExtResource("9_auction")]
visible = false
layout_mode = 2

[node name="LadyLuckTab" parent="MainLayout/ContentArea/PageContainer" instance=ExtResource("10_luck")]
visible = false
layout_mode = 2

[node name="NavBar" type="PanelContainer" parent="MainLayout" unique_id=489164190]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 8

[node name="NavButtons" type="HBoxContainer" parent="MainLayout/NavBar" unique_id=2029648637]
layout_mode = 2

[node name="Hero" type="Button" parent="MainLayout/NavBar/NavButtons" unique_id=1659472364]
layout_mode = 2
size_flags_horizontal = 3
text = "Hero"

[node name="Shop" type="Button" parent="MainLayout/NavBar/NavButtons" unique_id=2075316434]
layout_mode = 2
size_flags_horizontal = 3
text = "Shop"

[node name="Idle" type="Button" parent="MainLayout/NavBar/NavButtons" unique_id=445963650]
layout_mode = 2
size_flags_horizontal = 3
text = "Idle"

[node name="Achieve" type="Button" parent="MainLayout/NavBar/NavButtons" unique_id=1833123607]
layout_mode = 2
size_flags_horizontal = 3
text = "Achieve"

[node name="Settings" type="Button" parent="MainLayout/NavBar/NavButtons" unique_id=1437330831]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="EquipmentTooltip" parent="MainLayout" unique_id=1638817052 instance=ExtResource("4_vmrhr")]
layout_mode = 2

[node name="ShopPopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.88
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Margin" type="MarginContainer" parent="ShopPopup"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="ShopPopup/Margin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ArmorerBtn" type="Button" parent="ShopPopup/Margin/VBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "Armorer"

[node name="WeaponsmithBtn" type="Button" parent="ShopPopup/Margin/VBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "Weaponsmith"

[node name="ConsumablesBtn" type="Button" parent="ShopPopup/Margin/VBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "Consumables"

[node name="ArtisanBtn" type="Button" parent="ShopPopup/Margin/VBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "Artisan"

[node name="AuctionBtn" type="Button" parent="ShopPopup/Margin/VBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "Auction"

[node name="LadyLuckBtn" type="Button" parent="ShopPopup/Margin/VBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "Lady Luck"

[connection signal="pressed" from="MainLayout/NavBar/NavButtons/Hero" to="." method="_on_hero_button_pressed"]
[connection signal="pressed" from="MainLayout/NavBar/NavButtons/Idle" to="." method="_on_idle_button_pressed"]
